--- a/content/post/实时数仓架构.md
+++ b/content/post/实时数仓架构.md
@@ -6,3 +6,24 @@ tags: ["数仓", "实时"]
 categories: ["分布式"]
 author: ""
 ---
+### 实时数仓分层架构
+![dw_arch](../../static/img/20210305/dw_arch.png)
+
+### 实时数仓存储方案
+![dw_store](../../static/img/20210305/dw_store.png)
+
+### 实时数仓计算引擎
+| 引擎   | Flink                                             | Spark Streaming                                     | Storm                       |
+|------|---------------------------------------------------|-----------------------------------------------------|-----------------------------|
+| 处理模式 | 逐条流式处理                                            | 微批处理                                                | 逐条流式处理                      |
+| 延迟   | 毫秒级                                               | 秒级                                                  | 毫秒级                         |
+| API  | 流处理API、批处理API（后续会统一），以及开发成本更低的Table API和Flink SQL | 流处理API和Structured-Streaming API ，以及开发成本更低的Spark SQL | 灵活的底层API和具有事物保证的Trident API |
+| 容错机制 | State、CheckPoint、SavePoint                        | RDD CheckPoint                                      | ACK机制                       |
+| 语义保障 | Exactly Once，At Least Once                        | At Least Once                                       | At Least Once，Exactly Once  |
+| 状态管理 | Key State 和 Operator State两种 State 可以使用，支持多种持久化方案 | 有 UpdateStateByKey 等 API 进行带状态的变更，支持多种持久化方案         | Trident State状态管理           |
+
+### 参考
+* [实时数仓-你想要的数仓分层设计与技术选型](https://cloud.tencent.com/developer/article/1618182
+)
+* [深度解读实时数仓](https://www.infoq.cn/article/j0iqbx2qkq2ruxzr8jpa)
+* [美团实时数仓](https://tech.meituan.com/2018/10/18/meishi-data-flink.html)
