modify post - doc db

--- a/content/post/文档型数据库和图数据库分析.md
+++ b/content/post/文档型数据库和图数据库分析.md
@@ -7,3 +7,55 @@ categories: []
 author: ""
 ---
 
+> 对比常用文档型数据库，如ElasticSearch、MongoDB，图数据库，如JanusGraph、Neo4J等。
+
+# MongoDB
+
+## 数据模型：文档型数据库
+
+![doc-db](../../static/img/20210409/doc-db.png)
+
+## 架构
+
+## 优点（从性能、稳定性、易用性、扩展性、文档完备性）
+
+## 缺点
+
+# HBase
+
+## 数据模型：列式数据存储
+
+![column-db](../../static/img/20210409/column-db.png)
+
+## 架构
+
+## 优点（从性能、稳定性、易用性、扩展性、文档完备性）
+
+## 缺点
+
+
+# JanusGraph
+
+## 数据模型：图数据库
+
+![graph-db](../../static/img/20210409/graph-db.png)
+
+## 优点（从性能、稳定性、易用性、扩展性、文档完备性）
+
+## 缺点
+
+
+# Neo4J
+
+## 数据模型：图数据库
+
+![graph-db](../../static/img/20210409/graph-db.png)
+
+## 优点（从性能、稳定性、易用性、扩展性、文档完备性）
+
+## 缺点
+
+
+# 参考
+
+* [MongoDB和ElasticSearch的对比](https://leriou.github.io/2019-01-09-mongodb-compareto-elasticsearch/)
