modify post - doc-db

--- a/content/post/文档型数据库和图数据库分析.md
+++ b/content/post/文档型数据库和图数据库分析.md
@@ -184,18 +184,74 @@ commit操作保证了在机器宕机时，buffer和os cache中未同步到segmen
 
 4.fetch phase： coordinating node根据doc id去各个节点拉取document数据，并最终返回给客户端。
 
-
 # MongoDB
 
 ## 数据模型：文档型数据库
 
 ![doc-db](../../static/img/20210409/doc-db.png)
 
-## 架构
+## 概念
+
+MongoDB是面向文档的NoSQL数据库，用于大量数据的存储。
+
+MongoDB的逻辑结构是一种层次结构，主要由：文档（document）、集合（collection）和数据库（database）这三部分组成。三部分的层次结构如图所示：
+
+![mongo-arch](../../static/img/20210409/mongo-arch-01.png)
+
+* Replica set （RS）
+复制集合(Primary、Secondary、Leader)，主从关系，由多个Mongodb单机组成的高可用单元，起到数据的备份作用，避免单点故障。
+    * 包含奇数个MongoDB节点（2N+1， 最少3个）
+    * 读的时候默认是读主节点
+    * 主节点宕机后，replica set会重新选举，客户端会把数据写到新选出的primary中
+    * 如果RS中超过一半机器宕机，则无法写入，只能读取
+
+* Sharding
+由多个Replica set组成的扩展集群，如图所示。
+
+![mongo-shard](../../static/img/20210409/mongo-shard.png)
+
+    * 每一个ReplicaSet称为一个shard，多个分片组成shards，即sharding架构
+    * 客户端请求会通过mongos router（也可以是多个router，可以理解为网关代理），通过路由层可以把数据路由到具体的shard上，在这个过程中会存储许多的元信息 meta，简单理解元信息就是索引，存储的是哪个key存在了哪个shard上。同时元信息服务器【config servers】本身也是个replica set，本身也是主从复制的，提供高可用。
+
+* Collection（类似MySQL中的table）分片
+
+    * 当查询某个collection数据的时候，router（mongos）会路由到具体的shard（Replication set）中，根据shard规则可能数据都在一个shard中，也可能存在多个
+
+    * collection会自动分层多个chunk，如下图collection1的白色的框框，每个chunk会被自动负载均衡到不同的shard（Replication set），即实际保证的是chunk在不同shard的高可用（根据设置的副本的数量）
+
+    ![mongo-collection](../../static/img/20210409/mongo-collection.png)
+
+    Collection切分chunk的规则：
+    1. 按照范围（range）切分（存在热点问题）
+    ![mongo-shard-chunk01](../../static/img/20210409/mongo-shard-chunk01.png)
+
+    2. 按Hash切分chunk  
+    ![mongo-shard-chunk02](../../static/img/20210409/mongo-shard-chunk02.png)
 
 ## 优点（性能、稳定性、易用性、扩展性、文档完备性）
 
+* Schema free，基于二进制的Json存储文档，即binary json。一个Json就是一个document，支持嵌套。
+
+* 弱一致性（最终一致），能保证用户的访问速度
+
+* 支持分布式扩容
+
+* 聚合统计，支持类似ES的全文检索
+
+* 支持地理位置坐标检索
+
+* 支持table join（use $lookup），支持group by（use aggregation pipeline）
+
 ## 缺点
+
+* 不支持事务操作
+
+* 占用空间过大 
+当MongoDB的空间不足时它就会申请生成一大块硬盘空间，而且申请的量都是有64M、128M、256M来增加直到2G为单个文件的较大体积，并且随着数量叠增，可以在数据目录下看到整块生成而且不断递增的文件。
+
+* MongoDB没有类似MySQL那样成熟的运维工具
+
+* 有自己的DML查询语法，有一定的学习成本
 
 # HBase
 
@@ -235,5 +291,6 @@ commit操作保证了在机器宕机时，buffer和os cache中未同步到segmen
 # 参考
 
 * [ES中文文档](https://doc.yonyoucloud.com/doc/mastering-elasticsearch/chapter-1/index.html)
-* [MongoDB和ElasticSearch的对比](https://leriou.github.io/2019-01-09-mongodb-compareto-elasticsearch/)
 * [ES基础与读写原理](https://www.jianshu.com/p/cdace70842aa)
+* [MongoDB官方文档](https://docs.mongodb.com/manual/)
+* [MongoDB和ElasticSearch的对比](https://leriou.github.io/2019-01-09-mongodb-compareto-elasticsearch/)
