--- a/content/post/数仓层级模型.md
+++ b/content/post/数仓层级模型.md
@@ -15,3 +15,5 @@ author: ""
 |dwm|data warehouse model|汇总层|按业务主题组织轻度汇总数据，产出通用、稳定的预处理数据，尽可能多的满足数据需求，避免后期重复计算。尽量避免dw层表依赖dw表。|dwm_<业务名称>_<产出间隔>|dwm_<业务名称>_<产出间隔>.sql|
 |dwd|data warehouse detail|明细层|按业务主题组织明细数据，产出数据格式统一、质量可靠、易于应用的业务明细数据。按业务主题划分;对数据进行清洗、转换、聚合，一般不做汇总操作。为缩短数据计算的链路，没有必要每个ods表都一一建立dwd表。最多的场景是做数据聚合时建立。|dwd_<业务名称>_<产出间隔>|dwd_<业务名称>_<产出间隔>.sql|
 |ods|operational data store|源数据层|该层接收来自不同源系统数据。为方便问题跟踪和抽取效率，同时保持响应相关需求的能力,该层数据原则上和源系统数据保持一致，不做任何处理。|ods_<业务名称>_<产出间隔>|ods_<业务名称>_<产出间隔>.sql|
+
+* [数仓模型](https://cloud.tencent.com/developer/article/1122464)
