--- a/content/post/数仓层级模型.md
+++ b/content/post/数仓层级模型.md
@@ -35,10 +35,9 @@ author: ""
 
 | 层级  | 全称  | 中文说明  | 说明  | Hive表命名规范 |  Hive SQL命名规范    |
 |:------------- |:--------------- |:------------|:------------|:------------|:------------|
-|dim|dimension|维度层|变化频率较小的维度数据|dim_<业务名称>_<产出间隔> |dim_<业务名称>_<产出间隔>.sql|
-|app|application|应用层|业务方直接可用的数据 |app_<业务名称>_<产出间隔>|app_<业务名称>_<产出间隔>.sql|
-|dm|data market|集市层|按业务主题组织高度汇总数据，产出通用的指标数据，统一指标计算口径和方法，避免指标冗余计算导致数据不一致。面向具体统计需求的；按业务主题划分;对数据进行高度汇总；同一指标只能存储在一张表中；尽量避免dm层表依赖dm表。粒度：对于多粒度多层级的汇总。|dm_<业务名称>_<产出间隔>|dm_<业务名称>_<产出间隔>.sql|
-|dwm|data warehouse model|汇总层|按业务主题组织轻度汇总数据，产出通用、稳定的预处理数据，尽可能多的满足数据需求，避免后期重复计算。尽量避免dw层表依赖dw表。|dwm_<业务名称>_<产出间隔>|dwm_<业务名称>_<产出间隔>.sql|
+|ads|application data service|应用层|业务方直接可用的数据 |ads_<业务名称>_<产出间隔>|ads_<业务名称>_<产出间隔>.sql|
+|dim|dimension|维度层|变化频率较小的维度数据。基于维度建模理念思想，建立整个企业的一致性维度。降低数据计算口径和算法不统一风险。|dim_<业务名称>_<产出间隔> |dim_<业务名称>_<产出间隔>.sql|
+|dws|data warehouse service|汇总层|按业务主题组织汇总数据，产出通用的指标数据，统一指标计算口径和方法，避免指标冗余计算导致数据不一致。面向具体统计需求的；按业务主题划分;对数据进行高度汇总；同一指标只能存储在一张表中。|dws_<业务名称>_<产出间隔>|dws_<业务名称>_<产出间隔>.sql|
 |dwd|data warehouse detail|明细层|按业务主题组织明细数据，产出数据格式统一、质量可靠、易于应用的业务明细数据。按业务主题划分;对数据进行清洗、转换、聚合，一般不做汇总操作。为缩短数据计算的链路，没有必要每个ods表都一一建立dwd表。最多的场景是做数据聚合时建立。|dwd_<业务名称>_<产出间隔>|dwd_<业务名称>_<产出间隔>.sql|
 |ods|operational data store|源数据层|该层接收来自不同源系统数据。为方便问题跟踪和抽取效率，同时保持响应相关需求的能力,该层数据原则上和源系统数据保持一致，不做任何处理。|ods_<业务名称>_<产出间隔>|ods_<业务名称>_<产出间隔>.sql|
 
@@ -91,6 +90,7 @@ author: ""
 
 # 参考 
 * [数仓模型](https://cloud.tencent.com/developer/article/1122464)
+* [阿里的数仓分层](https://help.aliyun.com/document_detail/114447.html)
 * 《大数据之路 - 阿里巴巴大数据实践》
 * [企业大数据平台的数据仓库架构](https://www.sohu.com/a/337886026_99913726)
 * [从数仓到数据中台，谈技术选型最优解](https://zhuanlan.zhihu.com/p/139661395)
