--- a/content/post/流式计算概述.md
+++ b/content/post/流式计算概述.md
@@ -11,13 +11,24 @@ author: '<a rel="license noopener" href="http://www.hobbin.wang" target="_blank"
 > 流式计算相关概念。
 
 # 1.流式计算
-## 1.1 概念
+
+## 1.1 大数据处理的四个场景
+
+* 长时间运行的批式数据处理（Hadoop MapReduce、Spark等）
+
+* 实时运行的流式数据处理（Flink、SparkStreaming等）
+
+* 交互式运行的数据查询（秒级或者毫秒级，OLAP引擎等）
+
+* 大规模的智能模型的训练和部署（大数据链路与AI打通）
+
+## 1.2 概念
 流式计算(stream processing)是用于处理无界数据集的计算，包括真正的流式和通过微批(micro-batch)方式实现的流式计算。
 
 — "A type of data processing engine that is designed with infinite data sets in mind. " – Streaming 101: The world beyond
 batch.
 
-## 1.2 特点
+## 1.3 特点
 * ***实时(realtime)且无界(unbounded)的数据流***
 数据源产出的数据，实时地被流计算订阅和消费。
 * ***持续(continuos)且高效（high-performance）的计算***
@@ -25,7 +36,7 @@ batch.
 * ***流式(streaming)且实时(realtime)的数据集成***
 流数据触发一次流计算的结果，类似流数据一样，可以直接写入目的存储。
 
-## 1.3 价值
+## 1.4 价值
 ![avatar](../../static/img/20210217/image2019-3-22_8_50_50.png)
 
 # 2. 核心概念
