modify post - flink batch stream unify

--- a/content/post/关于批流一体.md
+++ b/content/post/关于批流一体.md
@@ -13,7 +13,7 @@ author: ""
 
 # Flink是如何实现批处理的
 
-实现批吹的技术有很多，从各种关系型数据库的sql处理，到大数据领域的MapReduce、Hive、Spark等，这些都是处理有限数据流的经典方式。Flink作为专注于无限流处理的计算引擎，是如何做到批处理的呢？
+实现批处理的技术有很多，从各种关系型数据库的sql处理，到大数据领域的MapReduce、Hive、Spark等，这些都是处理有限数据流的经典方式。Flink作为专注于无限流处理的计算引擎，是如何做到批处理的呢？
 
 ![flink-infinite-flow](../../static/img/20210608/flink-infinite-flow.png)
 
@@ -83,6 +83,8 @@ Flink的批处理模型：
 # Flink DataStream API实现流批一体
 
 虽然开发者已经可以方便地基于SQL API执行流批一体的作业，但SQL并不能解决所有需求。一些逻辑特别复杂或者定制化程度比较高的作用也还是需要使用DataStream API。DataStream API虽然能更加灵活地应对流计算场景的各种需求，但缺乏对批处理的高效支持。因此Flink社区在完成SQL流批一体升级之后，从1.11版本开始投入大量精力完善DataStream API的流批一体能力。在 DataSteam API 上增加批处理的语义，同时结合流批一体 Connector 的设计，让 DataStream API 能够在流批融合场景下对接 Kafka 和 HDFS 等不同类型流批数据源。
+
+<!-- TODO: 未完待补充 -->
 
 # 参考
 
