add new post : program language

--- a/content/post/编程语言对比.md
+++ b/content/post/编程语言对比.md
@@ -285,8 +285,29 @@ Go中的包管理并不完美。默认情况下，它无法创建具有固定包
 
 # PHP
 
+PHP 全称 PHP Hypertext Preprocessor，是“超文本预处理器”的意思。它是一种跨平台的、开源的、免费的脚本语言，其语法吸收了C语言、Java 和 Perl 的特点，利于学习，使用广泛，主要适用于 Web 开发领域。
+
+## 作者
+拉斯姆斯·勒多夫（Rasmus Lerdorf）
+
+## 诞生时间
+1994年
+
+## 类型
+
+解释型编程语言。
+将PHP代码解释为opcode之后再交由Zend引擎执行。
+
+## 解决的问题（产生的背景）
+
+1994 年，拉斯姆斯·勒多夫（Rasmus Lerdorf）创造了 PHP，这个时候的 PHP 只是用 Perl 语言编写的一系列 CGI 脚本，用于跟踪他在线简历的访问情况，统计他自己网站的访问者。
+
+勒多夫把这些 CGI 脚本命名为“Personal Home Page Tools”。这里我们姑且将之称为 PHP1 吧！这个早期的 PHP Tools 并不是一门语言，只是一些工具，提供基本的变量，并使用嵌入式 HTML 句法自动处理表单变量。
+
 # 参考
 
 * [Python优缺点介绍](http://c.biancheng.net/view/4129.html)
 
 * [Go语言介绍](http://c.biancheng.net/view/1.html)
+
+* [PHP语言介绍](http://c.biancheng.net/view/6106.html)
