change categories, add new posts, including management, nurture and planning

--- a/content/post/分布式一致性算法.md
+++ b/content/post/分布式一致性算法.md
@@ -3,7 +3,7 @@ title: "分布式一致性算法"
 date: 2020-06-18T21:59:47+08:00
 draft: false
 tags: ["分布式", "一致性"]
-categories: ["分布式"]
+categories: ["技术"]
 author: ""
 ---
 
