--- a/content/post/存储引擎选型.md
+++ b/content/post/存储引擎选型.md
@@ -3,7 +3,7 @@ title: "存储引擎选型"
 date: 2021-02-01T21:26:29+08:00
 draft: false
 tags: ["存储", "分布式"]
-categories: ["分布式"]
+categories: ["技术"]
 author: ""
 ---
 
