--- a/content/post/实时数仓模型.md
+++ b/content/post/实时数仓模型.md
@@ -3,7 +3,7 @@ title: "实时数仓模型"
 date: 2021-03-01T13:40:45+08:00
 draft: false
 tags: ["数仓", "实时"]
-categories: ["分布式"]
+categories: ["技术"]
 author: ""
 ---
 
