--- a/content/post/数仓层级模型.md
+++ b/content/post/数仓层级模型.md
@@ -3,7 +3,7 @@ title: "数仓层级模型"
 date: 2021-02-15T22:23:45+08:00
 draft: false
 tags: ["数仓", "hive"]
-categories: ["分布式"]
+categories: ["技术"]
 author: ""
 ---
 
