--- a/content/post/流式计算概述.md
+++ b/content/post/流式计算概述.md
@@ -4,7 +4,7 @@ date: 2019-05-17T11:30:32+08:00
 lastmod: 2021-02-17T11:30:32+08:00 
 draft: false
 tags: ["实时计算", "分布式", "流式计算"]
-categories: ["分布式"]
+categories: ["技术"]
 author: '<a rel="license noopener" href="http://www.hobbin.wang" target="_blank">Hobbin</a>'
 ---
 
