modify post, finish 2023年个人目标

--- a/content/post/2023年个人目标.md
+++ b/content/post/2023年个人目标.md
@@ -7,4 +7,92 @@ categories: ["规划"]
 author: "Hobbin"
 ---
 
-> 2023年个人规划。
+> 2023年家中添加新成员，我势必会分摊很大一部分精力在家庭方面。在新的一年，
+
+### 健康
+
+```
+1. 💤保证足够的睡眠，晚上11点半前休息，早晨7点起床
+    Tips：睡眠不足可能会是常态，要抓紧尽可能多的空闲时间休息，哪怕闭眼小憩一会
+2. 🏃保持运动，每周跑步3次，每次4公里，每次30分钟左右
+    Tips：周六跑一次、周日跑一次、周内跑一次
+3. 🥢保持规律饮食，三餐按时就餐，控制饮食量，吃慢一点
+    Tips：吃饭忌辣忌刺激性食物，忌直接食用冰箱冷藏食物。晚10点后不吃零食，饿就吃水果
+4. 🥃经常喝水，每天保证5杯水，每天保证2L水
+    Tips：大概得上8趟厕所（早晨1次 + 上午2次 + 下午3次 + 晚上2次）
+5. 😷家人们至少都要体检一次，出门戴口罩，勤洗手消毒，家中储备常用药
+    Tips：疫情放开后的第一年，仍要做好防护，对自己和家庭负责
+6. 👶给宝宝们选择一款合适的保险
+```
+
+### 家庭
+
+```
+1. 👨‍👩‍👦‍👦保持良好的心态，遇事冷静不发火。和家人多沟通，寻求解决问题，而不是宣泄情绪
+    Tips：沟通、沟通、再沟通，即使找外援也要沟通
+2. 🚼照顾好宝宝，宝宝的健康成长是今年家中的头等大事
+    Tips：长期有耐心，学习不同年龄婴儿的育儿知识，培养好两个宝宝是ROI很高的事情
+3. 🚗今年给家里买辆车，提升家庭成员出行品质
+    Tips：结合实际需求，在合适的时间点采购一辆车。大多数通勤，其次是家庭成员出行
+4. 📄今年开始申请北京落户，关注天津户籍政策变动
+```
+
+### 事业
+
+```
+1. 👨🏻‍💼管理能力持续提升，深耕带队能力，管理幅度提升至15人规模
+    Tips：管理有很多方法论，需要个人在实践中结合实际情况进行摸索和沉淀。乐于学习，勤于实践
+2. 👨‍💻保持技术敏锐性，在数据开发、后端开发领域，持续沉淀和积累
+    Tips：转型管理后，技术绝不能落下。个人的职业方向已定型，在数据开发、后端开发方向，持续沉淀和学习，不要丢掉吃饭的饭碗
+3. 🤝和前同事、同学保持必要的交流，经常线上、线下聊聊聚聚
+    Tips：要看看外面的世界，吸收不同的知识，保留尽可能多的机会
+4. 🧑‍💻多交流，提升业务认知。拓展自己在地图数据建设方面的认知，具备资深专家的能力
+    Tips：不给自己设限，保持对相关领域的敏锐性
+```
+
+### 旅行
+
+```
+1. 🏞️ 每1～2周陪家人去趟公园转转
+   Tips：小孩还小，出远门旅游不现实，可以多就近活动活动
+```
+
+### 财务
+
+```
+1. 🏦具备随时还清房贷的能力
+   Tips：视家庭财务情况，决定是否需要提前还清贷款，或再还一小部分
+2. 💹个人账户存款再提高1.5倍（年底存款是年初的2.5倍）
+   Tips：可能会受调薪、年终奖情况影响 
+3. 💲随着个人持有的股票逐步解禁，视情况进行部分套现
+   Tips：D股票尽早套现，M股票到年底可部分套现部分持有
+4. 🤑保持稳健的投资，关注基金、股票
+   Tips：不要把钱全部存活期，利息太低几乎可忽略
+5. 💸有些东西没必要买新的，买二手的可以省很大一笔。物尽其用，理性消费，能省则省
+   Tips：钱要投资在能产生长远价值的东西上，比如育儿的知识书籍、新生儿的保险等
+```
+
+### 学习成长
+
+```
+1. 📖保持阅读，读完至少6本书
+   Tips：聚焦在管理、育儿和技术方向，充分利用通勤时间集中学习
+2. 🔗保持个人网站内容更新，至少更新10篇高质量文章
+   Tips：读书的心得、工作和生活的感悟、新技术的学习等
+3. 👨‍👩‍👦‍👦学习育儿知识，给孩子成长打好基础
+   Tips：聚焦在保证孩子身体发育、智力成长方面
+```
+
+### 兴趣爱好
+
+```
+1. 🏃培养跑步兴趣爱好，坚持跑步运动
+    Tips：相比篮球等运动，跑步更灵活和实用，2023年跑起来
+```
+
+
+
+
+
+
+
