modify post -  2023年个人目标

--- a/content/post/2023年个人目标.md
+++ b/content/post/2023年个人目标.md
@@ -7,7 +7,7 @@ categories: ["规划"]
 author: "Hobbin"
 ---
 
-> 2023年家中添加新成员，我势必会分摊很大一部分精力在家庭方面。在新的一年，
+> 2023年家中添加两位新成员，我会分摊很大一部分精力在家庭方面。在新的一年，持续关注健康、家庭、事业、财务、学习成长和个人爱好。
 
 ### 健康
 
@@ -17,7 +17,7 @@ author: "Hobbin"
 2. 🏃保持运动，每周跑步3次，每次4公里，每次30分钟左右
     Tips：周六跑一次、周日跑一次、周内跑一次
 3. 🥢保持规律饮食，三餐按时就餐，控制饮食量，吃慢一点
-    Tips：吃饭忌辣忌刺激性食物，忌直接食用冰箱冷藏食物。晚10点后不吃零食，饿就吃水果
+    Tips：吃饭忌辣忌刺激性食物，忌直接食用冰箱冷藏食物。晚10点后不吃零食，如果饿就吃水果
 4. 🥃经常喝水，每天保证5杯水，每天保证2L水
     Tips：大概得上8趟厕所（早晨1次 + 上午2次 + 下午3次 + 晚上2次）
 5. 😷家人们至少都要体检一次，出门戴口罩，勤洗手消毒，家中储备常用药
@@ -29,11 +29,11 @@ author: "Hobbin"
 
 ```
 1. 👨‍👩‍👦‍👦保持良好的心态，遇事冷静不发火。和家人多沟通，寻求解决问题，而不是宣泄情绪
-    Tips：沟通、沟通、再沟通，即使找外援也要沟通
+    Tips：沟通、沟通、再沟通，即使找外援也要沟通。发火吵架不是解决问题的根本办法，只会让事情变得更糟
 2. 🚼照顾好宝宝，宝宝的健康成长是今年家中的头等大事
     Tips：长期有耐心，学习不同年龄婴儿的育儿知识，培养好两个宝宝是ROI很高的事情
 3. 🚗今年给家里买辆车，提升家庭成员出行品质
-    Tips：结合实际需求，在合适的时间点采购一辆车。大多数通勤，其次是家庭成员出行
+    Tips：结合实际需求，在合适的时间点采购一辆车。大多数时间用于通勤，其次是家庭成员出行
 4. 📄今年开始申请北京落户，关注天津户籍政策变动
 ```
 
@@ -43,18 +43,11 @@ author: "Hobbin"
 1. 👨🏻‍💼管理能力持续提升，深耕带队能力，管理幅度提升至15人规模
     Tips：管理有很多方法论，需要个人在实践中结合实际情况进行摸索和沉淀。乐于学习，勤于实践
 2. 👨‍💻保持技术敏锐性，在数据开发、后端开发领域，持续沉淀和积累
-    Tips：转型管理后，技术绝不能落下。个人的职业方向已定型，在数据开发、后端开发方向，持续沉淀和学习，不要丢掉吃饭的饭碗
+    Tips：转型管理后，技术绝不能落下。个人的职业方向已定型，在数据开发、后端开发方向，持续沉淀和学习，不要丢掉技术饭碗
 3. 🤝和前同事、同学保持必要的交流，经常线上、线下聊聊聚聚
     Tips：要看看外面的世界，吸收不同的知识，保留尽可能多的机会
 4. 🧑‍💻多交流，提升业务认知。拓展自己在地图数据建设方面的认知，具备资深专家的能力
     Tips：不给自己设限，保持对相关领域的敏锐性
-```
-
-### 旅行
-
-```
-1. 🏞️ 每1～2周陪家人去趟公园转转
-   Tips：小孩还小，出远门旅游不现实，可以多就近活动活动
 ```
 
 ### 财务
@@ -82,6 +75,15 @@ author: "Hobbin"
 3. 👨‍👩‍👦‍👦学习育儿知识，给孩子成长打好基础
    Tips：聚焦在保证孩子身体发育、智力成长方面
 ```
+
+### 旅行
+
+```
+1. 🏞️ 每1～2周陪家人去趟公园转转
+   Tips：小孩还小，出远门旅游不现实，可以多就近活动活动
+```
+
+
 
 ### 兴趣爱好
 
