add post - 初为人父

--- a/content/post/初为人父的一点感想.md
+++ b/content/post/初为人父的一点感想.md
@@ -1,5 +1,5 @@
 ---
-title: "初为人父的一点感想"
+title: "初为人父"
 date: 2023-02-06T18:18:01+08:00
 draft: false
 tags: ["育儿"]
@@ -7,5 +7,56 @@ categories: ["育儿"]
 author: "Hobbin"
 ---
 
-> 2023年1月13日13:20分，两个儿子出生了。今天已经25天了，分享以下这25天的心路历程。
+> 今天是两个儿子出生的第25天，分享一下这25天的育儿心路历程。
+
+### 出生🐣🐣
+2023年1月13日13时（腊月二十二，星期五），两个儿子出生了，我心中欣喜至极。13时40分，医生推着婴儿车让我们看，这是我和两个小孩的初次见面。两个小孩面对面，白白净净的脸蛋，浓密的毛发，微微张开的眼睛，甚是喜人。
+
+![chuild-1](../../static/img/20230206/child_1.jpg)
+
+老婆第一次生产，也是第一次手术，生之前特别紧张，一度哭泣的不行。很佩服老婆的勇气，十月怀胎的艰辛以及生产前的焦虑害怕，终于顺利生产，实属不易。虎年的尾巴，家里添上了两只小老虎，喜上加喜，好事成双。
+
+### 回家🏠
+俩小孩出生时，体重偏轻，在医院新生儿科住了一周，稳定后出院回家了。2023年1月20日（腊月二十九），和爸妈一起接两个小孩回家。
+
+![chuild-2](../../static/img/20230206/child_2.jpg)
+
+刚接回家时，还分不太清两个小家伙，特意找了找记号，发现老二的眉眼之间有个特点，看上去像个连笔的“王”字，是皮肤比较薄血管突显的。
+
+![chuild-3](../../static/img/20230206/child_3.jpg)
+
+两个小孩太小了，小脚丫跟我的大拇手指差不多，甚至还没有我的大拇手指大。红彤彤的脚掌，放在手心，太可爱了。
+
+![chuild-4](../../static/img/20230206/child_4.jpg)
+
+![chuild-5](../../static/img/20230206/child_5.jpg)
+
+### 晒太阳🌞
+俩小孩最喜欢晒太阳了，浑身舒展开，伸直了腰板，甚是舒服。老大老二还有黄疸，所以每天还需要晒晒太阳。最近皮肤明显变白些了，应该黄疸值降下去了。马上又要打疫苗了，黄疸不降、体重过轻还打不了疫苗，得尽快增体重啦。
+
+![chuild-6](../../static/img/20230206/child_6.jpg)
+
+
+### 脐带🔗🔗
+老大的脐带在两周左右脱落了，老二的在三周左右。作为曾经连接他们和母亲的唯一纽带，收藏起来留作纪念。
+
+![chuild-7](../../static/img/20230206/child_7.jpg)
+
+
+### 奶爸 👨🏻‍🍼
+妈妈的奶水不够，在第二周我们给孩子加奶粉了，开始了母乳和奶粉混合喂养。在选什么奶粉上，我们做了很多功课，比如是否需要小分子蛋白的奶粉、是否需要早产儿奶粉、乳铁蛋白是什么、奶瓣便便是怎么回事等等… 最终选择了一款营养相对均衡、周边人用的也挺多的一款。也因为是第一次当父母，妈妈还因为让孩子吃奶粉而愧疚的不行，感觉对不住孩子。
+
+孩子接回家后，晚上喂养的任务自然而然落到我身上了，从孩子回家到现在的近3周时间里，我没有再睡过完整的觉，甚至起初每晚只能睡2～3个小时，由于处于特别兴奋地状态，所以第二天也未感到特别累，但是过了前2天的新鲜劲儿，就不行了，实在撑不住，让妈和老婆协助喂养了。
+
+回家后的第一周，两个小孩吃饭不太好，我们也不懂该喂食多少，导致喂养量偏低，两个小孩体重增长慢。去医院复查，医生让我们2小时喂养一次，加大喂食量，每天增5～10ml，确保营养跟得上。
+
+小孩回家第一周就出现胀气的问题，半夜多次哭醒，撕心裂肺的那种哭。网上查资料，说可能是吃的快吃进空气、可能是吃的凉了，加上肠胃功能发育不完善，就会胀气，进而发展为肠绞痛。医生说没有太好的办法，前者可以通过每次饭后的拍嗝来预防，每天做做排气操，后者只能靠安抚了。当他撕心裂肺哭时，只能抱起来安抚安抚，没太好的办法。这是正常的生理现象，过1个月自然会恢复。
+
+小孩的食量真的是个玄学，每隔2～3小时喂养一次，每次吃的量不太稳定，多的时候能到80ml，下一次突然就只能喝20ml了，往往是喝着喝着酒睡着了，弹脚丫、摸鼻子都弄不醒。吃的少很愁人… 
+
+### 宝贝👶👶
+欢迎两个天使宝宝加入我们这个家庭，感谢上天恩赐我们的宝贝，愿两个宝宝健康成长，爸爸妈妈会竭尽所能呵护你俩 👨‍👩‍👦‍👦
+
+![chuild-8](../../static/img/20230206/child_8.jpg)
+![chuild-9](../../static/img/20230206/child_9.jpg)
 
